force-app/main/default/objects/Technical_Interview__c/Technical_Interview__c.object-meta.xml
<CustomObject>
    <description>Données d entretien technique IA : planification, scores et statut. Relation 1:1 avec Opportunity (candidature).</description>
    <label>Technical Interview</label>
    <nameField>
        <displayFormat>TI-{00000}</displayFormat>
        <label>Interview ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Technical Interviews</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>