force-app/main/default/objects/Technical_Interview__c/fields/Composite_Score__c.field-meta.xml
<CustomField>
    <fullName>Composite_Score__c</fullName>
    <description>Score composite (50% technique + 25% gaming + 25% CV)</description>
    <label>Composite Score</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>