force-app/main/default/objects/Technical_Interview__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <description>Durée de l entretien technique en minutes</description>
    <label>Duration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>30</fullName>
                <label>30 min</label>
            </value>
            <value>
                <fullName>45</fullName>
                <default>true</default>
                <label>45 min</label>
            </value>
            <value>
                <fullName>60</fullName>
                <label>60 min</label>
            </value>
            <value>
                <fullName>90</fullName>
                <label>90 min</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>