force-app/main/default/objects/Technical_Interview__c/fields/Interview_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Interview_DateTime__c</fullName>
    <description>Date et heure planifiées pour l entretien technique</description>
    <label>Interview DateTime</label>
    <type>DateTime</type>
</CustomField>