force-app/main/default/objects/Technical_Interview__c/fields/Manager_Notes__c.field-meta.xml
<CustomField>
    <fullName>Manager_Notes__c</fullName>
    <description>Notes et observations du recruteur après l entretien technique (étoiles + commentaires)</description>
    <label>Manager Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>