force-app/main/default/objects/Technical_Interview__c/fields/Meet_Link__c.field-meta.xml
<CustomField>
    <fullName>Meet_Link__c</fullName>
    <description>Lien Meet pour l entretien technique</description>
    <label>Meet Link</label>
    <type>Url</type>
</CustomField>