force-app/main/default/objects/Technical_Interview__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Candidature liée à cet entretien technique</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Technical Interviews</relationshipLabel>
    <relationshipName>Technical_Interviews</relationshipName>
    <type>Lookup</type>
</CustomField>