force-app/main/default/objects/Technical_Interview__c/fields/Reschedule_Requested__c.field-meta.xml
<CustomField>
    <fullName>Reschedule_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reschedule Requested</label>
    <type>Checkbox</type>
</CustomField>