force-app/main/default/objects/Technical_Interview__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <description>Score de l entretien technique (0-100)</description>
    <label>Score</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>