force-app/main/default/objects/Technical_Interview__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Statut de l entretien technique (Scheduled, In Progress, Completed)</description>
    <label>Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>